kubernetes/gitops/traefik/deps/refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-traefik-gateway-routes
  namespace: cardsgo
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik-gateway
  to:
  - group: ""
    kind: Service
